--- a/src/app/super-admin/super-admin.component.html
+++ b/src/app/super-admin/super-admin.component.html
@@ -25,6 +25,13 @@
         </div>
 
         <div>
+          <label class="block text-sm font-medium text-gray-400 mb-1">Email</label>
+          <input type="text" formControlName="email"
+                 class="w-full bg-gray-700 border border-gray-600 rounded-lg p-2 text-white focus:ring-2 focus:ring-blue-500 outline-none"
+                 placeholder="Ex: restaurant@xyz.com">
+        </div>
+
+        <div>
           <label class="block text-sm font-medium text-gray-400 mb-1">Identifiant Unique (URL)</label>
           <input type="text" formControlName="id"
                  class="w-full bg-gray-900 border border-gray-600 rounded-lg p-2 text-gray-300 font-mono text-sm"
